cabal-version:   2.4
name:            rebound
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2021 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

synopsis:        Tools for working with traversal-based De Bruijn-indices
homepage:        https://github.com/jonascarpay/rebound#readme
category:        Language, Compiler/Interpreters

source-repository head
  type:     git
  location: git://github.com/jonascarpay/rebound.git

library
  build-depends:    base >=4.9 && <5
  hs-source-dirs:   src
  exposed-modules:  Rebound
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields
